--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<link rel='stylesheet' type='text/css' href='style.css'>
-		<script src='script.js' type='text/javascript'>
-		<script src='http://code.jquery.com/jquery-2.0.3.min.js' type='text/javascript'>
+		<script src='script.js' type='text/javascript'></script>
+		<script src='http://code.jquery.com/jquery-2.0.3.min.js' type='text/javascript'></script>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<div id="timer"></div>
 	</body>
 </html>
