--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<link rel='stylesheet' type='text/css' href='style.css'>
-		<script src='script.js' type='text/javascript'></script>
 		<script src='http://code.jquery.com/jquery-2.0.3.min.js' type='text/javascript'></script>
+		<script src='http://code.jquery.com/color/jquery.color-2.1.0.min.js' type='text/javascript'></script>
+		<script src='script.js' type='text/javascript'></script>
 	</head>
 	<body>
 		<div id="timer"></div>
